<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dialog_estado_height"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="@dimen/login_mt"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado_lbl_placa"
                android:textStyle="bold"/>

            <TextView
                android:paddingLeft="10dp"
                android:id="@+id/estado_placa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado_lbl_telefono"
                android:textStyle="bold"/>

            <TextView
                android:paddingLeft="10dp"
                android:id="@+id/estado_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado_lbl_estado"
                android:textStyle="bold"/>

            <TextView
                android:paddingLeft="10dp"
                android:id="@+id/estado_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado_lbl_speed"
                android:textStyle="bold"/>

            <TextView
                android:paddingLeft="10dp"
                android:id="@+id/estado_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0 Km/h"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado_lbl_gps"
                android:textStyle="bold"/>

            <TextView
                android:paddingLeft="10dp"
                android:id="@+id/estado_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="italic"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/estado_lbl_cerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:text="@string/dialog_cerrar"
        android:textStyle="bold|italic"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>
