<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dialog_speed_height"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/login_mt_btn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical|center_horizontal|center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_horizontal"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical|center_horizontal|center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSpeedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Digite algo:"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtVelocidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/speed_lbl_speed"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtDistancia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/speed_lbl_distance"/>

            <Spinner
                android:id="@+id/spTiempos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/array_tiempos"
                android:spinnerMode="dialog"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAceptar"
                android:background="@drawable/borde_redondeado"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancelar"
                android:background="@drawable/borde_redondeado"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
